disable mac_filter config switch by default
* src/qemu/qemu.conf:  disables the mac_filter config switch by default
  to match existing convention, also document the option

--- a/src/qemu/qemu.conf
+++ b/src/qemu/qemu.conf
@@ -153,4 +153,7 @@
 
 # hugetlbfs_mount = "/dev/hugepages"
 
-mac_filter = 1
+# mac_filter enables MAC addressed based filtering on bridge ports.
+# This currently requires ebtables to be installed.
+#
+# mac_filter = 1
