esx: Add documentation to the website
* docs/drivers.html.in: list the ESX driver
* docs/drvesx.html.in: the new ESX driver documentation
* docs/hvsupport.html.in: add the ESX driver to the matrix
* docs/index.html.in, docs/sitemap.html.in: list the ESX driver
* src/esx/esx_driver.c: fix and cleanup some comments

--- a/docs/hvsupport.html.in
+++ b/docs/hvsupport.html.in
@@ -23,6 +23,7 @@ updated on <i>2008-06-05</i>.
         <th><a href="remote.html">Remote</a></th>
         <th><a href="drvvbox.html">VirtualBox</a></th>
         <th><a href="drvone.html">ONE</a></th>
+        <th><a href="drvesx.html">ESX</a></th>
       </tr>
       <tr>
         <td> virConnectClose </td>
@@ -33,6 +34,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> &#x2265; 0.6.3 </td>
         <td> &#x2265; 0.6.4 </td>
+        <td> &#x2265; 0.7.0 </td>
       </tr>
       <tr>
         <td> virConnectGetCapabilities </td>
@@ -43,6 +45,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> &#x2265; 0.6.3 </td>
         <td> &#x2265; 0.6.4 </td>
+        <td> &#x2265; 0.7.1 </td>
       </tr>
       <tr>
         <td> virConnectGetHostname </td>
@@ -53,6 +56,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> &#x2265; 0.6.3 </td>
         <td> x </td>
+        <td> &#x2265; 0.7.0 </td>
       </tr>
       <tr>
         <td> virConnectGetMaxVcpus </td>
@@ -61,6 +65,7 @@ updated on <i>2008-06-05</i>.
         <td> x </td>
         <td> x </td>
         <td> &#x2265; 0.3.0 </td>
+        <td> x </td>
         <td> x </td>
         <td> x </td>
       </tr>
@@ -73,6 +78,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> &#x2265; 0.6.3 </td>
         <td> &#x2265; 0.6.4 </td>
+        <td> &#x2265; 0.7.0 </td>
       </tr>
       <tr>
         <td> virConnectGetURI </td>
@@ -83,6 +89,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> &#x2265; 0.6.3 </td>
         <td> &#x2265; 0.6.4 </td>
+        <td> &#x2265; 0.7.0 </td>
       </tr>
       <tr>
         <td> virConnectGetVersion </td>
@@ -93,6 +100,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> &#x2265; 0.6.3 </td>
         <td> &#x2265; 0.6.4 </td>
+        <td> &#x2265; 0.7.0 </td>
       </tr>
       <tr>
         <td> virConnectListDefinedDomains </td>
@@ -103,6 +111,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> &#x2265; 0.6.3 </td>
         <td> &#x2265; 0.6.4 </td>
+        <td> &#x2265; 0.7.0 </td>
       </tr>
       <tr>
         <td> virConnectListDomains </td>
@@ -113,6 +122,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> &#x2265; 0.6.3 </td>
         <td> &#x2265; 0.6.4 </td>
+        <td> &#x2265; 0.7.0 </td>
       </tr>
       <tr>
         <td> virConnectNumOfDefinedDomains </td>
@@ -123,6 +133,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> &#x2265; 0.6.3 </td>
         <td> &#x2265; 0.6.4 </td>
+        <td> &#x2265; 0.7.0 </td>
       </tr>
       <tr>
         <td> virConnectNumOfDomains </td>
@@ -133,6 +144,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> &#x2265; 0.6.3 </td>
         <td> &#x2265; 0.6.4 </td>
+        <td> &#x2265; 0.7.0 </td>
       </tr>
       <tr>
         <td> virConnectOpen </td>
@@ -143,6 +155,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> &#x2265; 0.6.3 </td>
         <td> &#x2265; 0.6.4 </td>
+        <td> x </td>
       </tr>
       <tr>
         <td> virConnectOpenAuth </td>
@@ -153,6 +166,7 @@ updated on <i>2008-06-05</i>.
         <td>  </td>
         <td>  </td>
         <td>  </td>
+        <td> &#x2265; 0.7.0 </td>
       </tr>
       <tr>
         <td> virConnectOpenReadOnly </td>
@@ -161,6 +175,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.2.0 </td>
         <td> &#x2265; 0.2.0 </td>
         <td> &#x2265; 0.3.0 </td>
+        <td> x </td>
         <td> x </td>
         <td> x </td>
       </tr>
@@ -173,6 +188,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> &#x2265; 0.6.3 </td>
         <td> x </td>
+        <td> x </td>
       </tr>
       <tr>
         <td> virDomainBlockPeek </td>
@@ -180,6 +196,7 @@ updated on <i>2008-06-05</i>.
         <td> 0.4.3 </td>
         <td> 0.4.3 </td>
         <td> 0.4.3 </td>
+        <td> x </td>
         <td> x </td>
         <td> x </td>
         <td> x </td>
@@ -193,6 +210,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.2 </td>
         <td> x </td>
         <td> x </td>
+        <td> x </td>
       </tr>
       <tr>
         <td> virDomainCoreDump </td>
@@ -201,6 +219,7 @@ updated on <i>2008-06-05</i>.
         <td> x </td>
         <td> x </td>
         <td> &#x2265; 0.3.0 </td>
+        <td> x </td>
         <td> x </td>
         <td> x </td>
       </tr>
@@ -213,6 +232,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> &#x2265; 0.6.3 </td>
         <td> &#x2265; 0.6.4 </td>
+        <td> &#x2265; 0.7.0 </td>
       </tr>
       <tr>
         <td> virDomainCreateLinux </td>
@@ -223,6 +243,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> &#x2265; 0.6.3 </td>
         <td> &#x2265; 0.6.4 </td>
+        <td> x </td>
       </tr>
       <tr>
         <td> virDomainDefineXML </td>
@@ -233,6 +254,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> &#x2265; 0.6.3 </td>
         <td> &#x2265; 0.6.4 </td>
+        <td> &#x2265; 0.7.2 </td>
       </tr>
       <tr>
         <td> virDomainDestroy </td>
@@ -243,6 +265,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> &#x2265; 0.6.3 </td>
         <td> &#x2265; 0.6.4 </td>
+        <td> &#x2265; 0.7.0 </td>
       </tr>
       <tr>
         <td> virDomainDetachDevice </td>
@@ -252,6 +275,7 @@ updated on <i>2008-06-05</i>.
         <td> x </td>
         <td> &#x2265; 0.3.0 </td>
         <td> &#x2265; 0.6.3 </td>
+        <td> x </td>
         <td> x </td>
       </tr>
       <tr>
@@ -263,6 +287,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> &#x2265; 0.6.3 </td>
         <td> &#x2265; 0.6.4 </td>
+        <td> &#x2265; 0.7.0 </td>
       </tr>
       <tr>
         <td> virDomainGetAutostart </td>
@@ -273,11 +298,12 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> x </td>
         <td> x </td>
+        <td> x </td>
       </tr>
       <tr>
         <td> virDomainGetConnect </td>
         <td> 0.3.0 </td>
-        <td colspan="6"> not a HV function </td>
+        <td colspan="7"> not a HV function </td>
       </tr>
       <tr>
         <td> virDomainGetID </td>
@@ -288,6 +314,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> &#x2265; 0.6.3 </td>
         <td> &#x2265; 0.6.4 </td>
+        <td> &#x2265; 0.7.0 </td>
       </tr>
       <tr>
         <td> virDomainGetInfo </td>
@@ -298,6 +325,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> &#x2265; 0.6.3 </td>
         <td> &#x2265; 0.6.4 </td>
+        <td> &#x2265; 0.7.0 </td>
       </tr>
       <tr>
         <td> virDomainGetMaxMemory </td>
@@ -308,6 +336,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> &#x2265; 0.6.3 </td>
         <td> x </td>
+        <td> &#x2265; 0.7.0 </td>
       </tr>
       <tr>
         <td> virDomainGetMaxVcpus </td>
@@ -318,6 +347,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> x </td>
         <td> x </td>
+        <td> &#x2265; 0.7.0 </td>
       </tr>
       <tr>
         <td> virDomainGetName </td>
@@ -328,6 +358,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> &#x2265; 0.6.3 </td>
         <td> &#x2265; 0.6.4 </td>
+        <td> &#x2265; 0.7.0 </td>
       </tr>
       <tr>
         <td> virDomainGetOSType </td>
@@ -338,6 +369,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> &#x2265; 0.6.3 </td>
         <td> &#x2265; 0.6.4 </td>
+        <td> &#x2265; 0.7.0 </td>
       </tr>
       <tr>
         <td> virDomainGetSchedulerParameters </td>
@@ -348,6 +380,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> x </td>
         <td> x </td>
+        <td> &#x2265; 0.7.0 </td>
       </tr>
       <tr>
         <td> virDomainGetSchedulerType </td>
@@ -358,6 +391,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> x </td>
         <td> x </td>
+        <td> &#x2265; 0.7.0 </td>
       </tr>
       <tr>
         <td> virDomainGetUUID </td>
@@ -368,6 +402,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> &#x2265; 0.6.3 </td>
         <td> &#x2265; 0.6.4 </td>
+        <td> &#x2265; 0.7.0 </td>
       </tr>
       <tr>
         <td> virDomainGetUUIDString </td>
@@ -378,6 +413,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> &#x2265; 0.6.3 </td>
         <td> &#x2265; 0.6.4 </td>
+        <td> &#x2265; 0.7.0 </td>
       </tr>
       <tr>
         <td> virDomainGetVcpus </td>
@@ -388,6 +424,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> x </td>
         <td> x </td>
+        <td> &#x2265; 0.7.0 </td>
       </tr>
       <tr>
         <td> virDomainInterfaceStats </td>
@@ -396,6 +433,7 @@ updated on <i>2008-06-05</i>.
         <td> x </td>
         <td> x </td>
         <td> &#x2265; 0.3.2 </td>
+        <td> x </td>
         <td> x </td>
         <td> x </td>
       </tr>
@@ -408,6 +446,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> &#x2265; 0.6.3 </td>
         <td> x </td>
+        <td> &#x2265; 0.7.0 </td>
       </tr>
       <tr>
         <td> virDomainLookupByID </td>
@@ -418,6 +457,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> &#x2265; 0.6.3 </td>
         <td> &#x2265; 0.6.4 </td>
+        <td> &#x2265; 0.7.0 </td>
       </tr>
       <tr>
         <td> virDomainLookupByName </td>
@@ -428,6 +468,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> &#x2265; 0.6.3 </td>
         <td> &#x2265; 0.6.4 </td>
+        <td> &#x2265; 0.7.0 </td>
       </tr>
       <tr>
         <td> virDomainLookupByUUID </td>
@@ -438,6 +479,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> &#x2265; 0.6.3 </td>
         <td> &#x2265; 0.6.4 </td>
+        <td> &#x2265; 0.7.0 </td>
       </tr>
       <tr>
         <td> virDomainLookupByUUIDString </td>
@@ -448,6 +490,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> &#x2265; 0.6.3 </td>
         <td> &#x2265; 0.6.4 </td>
+        <td> &#x2265; 0.7.0 </td>
       </tr>
       <tr>
         <td> virDomainMigrate </td>
@@ -458,6 +501,7 @@ updated on <i>2008-06-05</i>.
         <td> 0.3.2 </td>
         <td> x </td>
         <td> x </td>
+        <td> &#x2265; 0.7.0 </td>
       </tr>
       <tr>
         <td> virDomainPinVcpu </td>
@@ -466,6 +510,7 @@ updated on <i>2008-06-05</i>.
         <td> x </td>
         <td> x </td>
         <td> &#x2265; 0.3.0 </td>
+        <td> x </td>
         <td> x </td>
         <td> x </td>
       </tr>
@@ -478,6 +523,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> &#x2265; 0.6.3 </td>
         <td> x </td>
+        <td> &#x2265; 0.7.0 </td>
       </tr>
       <tr>
         <td> virDomainRestore </td>
@@ -488,7 +534,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> x </td>
         <td> x </td>
-
+        <td> x </td>
       </tr>
       <tr>
         <td> virDomainResume </td>
@@ -499,6 +545,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> &#x2265; 0.6.3 </td>
         <td> &#x2265; 0.6.4 </td>
+        <td> &#x2265; 0.7.0 </td>
       </tr>
       <tr>
         <td> virDomainSave </td>
@@ -508,6 +555,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.2 </td>
         <td> &#x2265; 0.3.0 </td>
         <td> &#x2265; 0.6.3 </td>
+        <td> x </td>
         <td> x </td>
       </tr>
       <tr>
@@ -519,6 +567,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> x </td>
         <td> x </td>
+        <td> x </td>
       </tr>
       <tr>
         <td> virDomainSetMaxMemory </td>
@@ -528,6 +577,8 @@ updated on <i>2008-06-05</i>.
         <td> x </td>
         <td> &#x2265; 0.3.0 </td>
         <td> x </td>
+        <td> x </td>
+        <td> &#x2265; 0.7.0 </td>
       </tr>
       <tr>
         <td> virDomainSetMemory </td>
@@ -538,6 +589,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> &#x2265; 0.6.3 </td>
         <td> x </td>
+        <td> &#x2265; 0.7.0 </td>
       </tr>
       <tr>
         <td> virDomainSetSchedulerParameters </td>
@@ -548,6 +600,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> x </td>
         <td> x </td>
+        <td> &#x2265; 0.7.0 </td>
       </tr>
       <tr>
         <td> virDomainSetVcpus </td>
@@ -558,6 +611,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> x </td>
         <td> x </td>
+        <td> &#x2265; 0.7.0 </td>
       </tr>
       <tr>
         <td> virDomainShutdown </td>
@@ -568,6 +622,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> &#x2265; 0.6.3 </td>
         <td> &#x2265; 0.6.4 </td>
+        <td> &#x2265; 0.7.0 </td>
       </tr>
       <tr>
         <td> virDomainSuspend </td>
@@ -578,6 +633,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> &#x2265; 0.6.3 </td>
         <td> &#x2265; 0.6.4 </td>
+        <td> &#x2265; 0.7.0 </td>
       </tr>
       <tr>
         <td> virDomainUndefine </td>
@@ -588,17 +644,18 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> &#x2265; 0.6.3 </td>
         <td> &#x2265; 0.6.4 </td>
+        <td> &#x2265; 0.7.1 </td>
       </tr>
       <tr>
         <td> virGetVersion </td>
         <td> All </td>
         <td> All </td>
-        <td colspan="5"> Returns -1 if HV unsupported. </td>
+        <td colspan="6"> Returns -1 if HV unsupported. </td>
       </tr>
       <tr>
         <td> virInitialize </td>
         <td> 0.1.0 </td>
-        <td colspan="6"> not a HV function </td>
+        <td colspan="7"> not a HV function </td>
       </tr>
       <tr>
         <td> virDomainMemoryPeek </td>
@@ -606,6 +663,7 @@ updated on <i>2008-06-05</i>.
         <td> x </td>
         <td> 0.4.3 </td>
         <td> 0.4.3 </td>
+        <td> x </td>
         <td> x </td>
         <td> x </td>
         <td> x </td>
@@ -619,6 +677,7 @@ updated on <i>2008-06-05</i>.
         <td> &#x2265; 0.3.0 </td>
         <td> &#x2265; 0.6.3 </td>
         <td> x </td>
+        <td> &#x2265; 0.7.0 </td>
       </tr>
       <tr>
         <td> virNodeGetFreeMemory </td>
@@ -629,11 +688,13 @@ updated on <i>2008-06-05</i>.
         <td> x </td>
         <td> x </td>
         <td> x </td>
+        <td> &#x2265; 0.7.2 </td>
       </tr>
       <tr>
         <td> virNodeGetCellsFreeMemory </td>
         <td> 0.3.3 </td>
         <td> &#x2265; 0.3.3 </td>
+        <td> x </td>
         <td> x </td>
         <td> x </td>
         <td> x </td>
