--- a/docs/index.html.in
+++ b/docs/index.html.in
@@ -56,6 +56,9 @@
         The <a href="http://www.virtualbox.org/">VirtualBox</a> hypervisor
       </li>
       <li>
+        The <a href="http://www.vmware.com/">VMware ESX and GSX</a> hypervisors
+      </li>
+      <li>
         Storage on IDE/SCSI/USB disks, FibreChannel, LVM, iSCSI, NFS and filesystems
       </li>
     </ul>
