--- a/docs/sitemap.html.in
+++ b/docs/sitemap.html.in
@@ -160,6 +160,10 @@
                 <a href="drvone.html">OpenNebula</a>
                 <span>Driver for OpenNebula</span>
               </li>
+              <li>
+                <a href="drvesx.html">VMware ESX</a>
+                <span>Driver for VMware ESX</span>
+              </li>
             </ul>
           </li>
           <li>
