--- a/docs/drvone.html.in
+++ b/docs/drvone.html.in
@@ -27,12 +27,13 @@ tools and VM description files.</p>
 <p>The Uri of the driver protocol is "one". Some example
 connection Uris for the driver are:
 </p>
-<pre>    one:///                      (local access)
-    one+unix:///                 (local access)
-    one://example.com/           (remote access)
-    one+tcp://example.com/       (remote access, SASl/Kerberos)
-    one+ssh://user@example.com/  (remote access, SSH tunnelled)
-    </pre>
+<pre>
+one:///                      (local access)
+one+unix:///                 (local access)
+one://example.com/           (remote access)
+one+tcp://example.com/       (remote access, SASl/Kerberos)
+one+ssh://user@example.com/  (remote access, SSH tunnelled)
+</pre>
 <h2>
 <a name="xmlconfig"></a>Example domain XML config</h2>
 <p>There are some limitations on the XML attributes that may be
@@ -42,51 +43,51 @@ driver:</p>
 
 <h3>Paravirtualized guest direct kernel boot
 </h3>
-<pre>    &lt;domain type='one'&gt;
-    &lt;name&gt;vm01&lt;/name&gt;
-    &lt;memory&gt;32768&lt;/memory&gt;
-    &lt;vcpu&gt;1&lt;/vcpu&gt;
+<pre>
+&lt;domain type='one'&gt;
+  &lt;name&gt;vm01&lt;/name&gt;
+  &lt;memory&gt;32768&lt;/memory&gt;
+  &lt;vcpu&gt;1&lt;/vcpu&gt;
 
-    &lt;os&gt;
-        &lt;type&gt;linux&lt;/type&gt;
-        &lt;kernel&gt;/boot/vmlinuz-2.6.24-17-xen&lt;/kernel&gt;
-        &lt;initrd&gt;/boot/initrd.img-2.6.24-17-xen&lt;/initrd&gt;
-        &lt;cmdline&gt;&lt;/cmdline&gt;
-        &lt;root&gt;sda1&lt;/root&gt;
-    &lt;/os&gt;
+  &lt;os&gt;
+    &lt;type&gt;linux&lt;/type&gt;
+    &lt;kernel&gt;/boot/vmlinuz-2.6.24-17-xen&lt;/kernel&gt;
+    &lt;initrd&gt;/boot/initrd.img-2.6.24-17-xen&lt;/initrd&gt;
+    &lt;cmdline&gt;&lt;/cmdline&gt;
+    &lt;root&gt;sda1&lt;/root&gt;
+  &lt;/os&gt;
 
-    &lt;devices&gt;
+  &lt;devices&gt;
+    &lt;disk type='file' device='disk'&gt;
+      &lt;source file='/images/sgehosts/01/disk.img'/&gt;
+      &lt;target dev='sda1'/&gt;
+    &lt;/disk&gt;
 
-        &lt;disk type='file' device='disk'&gt;
-            &lt;source file='/images/sgehosts/01/disk.img'/&gt;
-            &lt;target dev='sda1'/&gt;
-        &lt;/disk&gt;
+    &lt;disk type='file' device='disk'&gt;
+      &lt;source file='/images/sgehosts/01/swap.img'/&gt;
+      &lt;target dev='sda2'/&gt;
+    &lt;/disk&gt;
 
-        &lt;disk type='file' device='disk'&gt;
-            &lt;source file='/images/sgehosts/01/swap.img'/&gt;
-            &lt;target dev='sda2'/&gt;
-        &lt;/disk&gt;
-
-        &lt;disk type='file' device='cdrom'&gt;
-            &lt;source file='/images/iso/cdrom.iso'/&gt;
-            &lt;target dev='hdc'/&gt;
-            &lt;readonly/&gt;
-        &lt;/disk&gt;
+    &lt;disk type='file' device='cdrom'&gt;
+      &lt;source file='/images/iso/cdrom.iso'/&gt;
+      &lt;target dev='hdc'/&gt;
+      &lt;readonly/&gt;
+    &lt;/disk&gt;
 
 
-        &lt;!--BRIDGE--&gt;
-        &lt;interface type='bridge'&gt;
-            &lt;source bridge='eth0'/&gt;
-            &lt;mac address='00:16:3e:5d:c7:9e'/&gt;
-        &lt;/interface&gt;
+    &lt;!--BRIDGE--&gt;
+    &lt;interface type='bridge'&gt;
+      &lt;source bridge='eth0'/&gt;
+      &lt;mac address='00:16:3e:5d:c7:9e'/&gt;
+    &lt;/interface&gt;
 
-        &lt;!--ONE Network--&gt;
-        &lt;interface type='network'&gt;
-          &lt;source network='onenetwork'/&gt;
-        &lt;/interface&gt;
-    &lt;/devices&gt;
-    &lt;/domain&gt;
-    </pre>
+    &lt;!--ONE Network--&gt;
+    &lt;interface type='network'&gt;
+      &lt;source network='onenetwork'/&gt;
+    &lt;/interface&gt;
+  &lt;/devices&gt;
+&lt;/domain&gt;
+</pre>
 <p>
 <b>Note:</b> The "&lt;interface type='network'&gt;" will
 attach the interface to a previously configured network (named
